# rustydiff

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: diff.rs  error.rs  lib.rs  main.rs  record.rs
src/output/: jsonl.rs  mod.rs  side_by_side.rs  unified.rs
src/parser/: detect.rs  json.rs  logfmt.rs  mod.rs
tests/: .integration.rs.pending-snap  integration.rs
tests/fixtures/: fp_right.jsonl  modified_right.jsonl  only_left.jsonl  only_right.jsonl
tests/snapshots/: integration__only_in_left_and_right.snap  integration__only_in_left_and_right.snap.new  integration__output_jsonl.snap  integration__output_jsonl.snap.new  integration__output_side_by_side.snap  integration__output_unified.snap
