[package]
name = "rustydiff"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Structured-diff CLI for JSON-lines and logfmt log streams"
license = "MIT OR Apache-2.0"
repository = "https://github.com/malisetti/rustydiff"
keywords = ["diff", "logs", "jsonl", "logfmt", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
regex = "1"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
